--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+### Environment files (do not commit real secrets)
+# Ignore all env files by default…
+.env
+.env.*
+.env.local
+.env.production
+.env.development
+# …but keep the documented template in Git
+!.env.example
+
 # dependencies
 /node_modules
 /.pnp
@@ -13,29 +23,25 @@
 # testing
 /coverage
 
-# next.js
+### Next.js
 /.next/
 /out/
 
-# production
+### Production build
 /build
 
-# misc
-.DS_Store
+### Misc
 *.pem
 
-# debug
+### Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
+### Vercel
 .vercel
 
-# typescript
+### TypeScript
 *.tsbuildinfo
 next-env.d.ts
